# flicker_remover

./: CMakeLists.txt  README.md  boolean_array_2_d.cxx  boolean_array_2_d.hpp  circular_buffer.hpp  flicker_remover.cxx  flicker_remover.hpp  flicker_remover_cpu.cxx  flicker_remover_cpu.hpp  main.cxx  open_cl_kernels.cxx  open_cl_kernels.hpp
